--- a/rnCSS.css
+++ b/rnCSS.css
@@ -4,19 +4,39 @@ body {
 	margin: 0px;
 	background-color: mistyrose;
 }
-.video-wrapper {
-	position: relative;
-	padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
-	height: 0;
-	width: 75%; /* You can set this width to whatever suits your needs */
-	margin: 0 auto;
+h1 {
+	text-align: center;
 }
-.video-wrapper video {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+h4 {
+	text-align: center;
+}
+p {
+	text-align: center;
+}
+embed{
+	float:center;
+}
+center{
+	padding-top:25px;
+}
+table {
+	border: none;
+}
+video{
+	padding-bottom:50px;
+}
+a {
+	color: royalblue;
+	font-size: 1.25em;
+	padding: 20px 40px;
+	text-decoration: none;
+}
+a:hover {
+	background-color: #111;
+	color: #e91e63;
+}
+.logo:hover {
+	background: none;
 }
 .nav {
 	border: 1px solid #ccc;
@@ -32,31 +52,6 @@ body {
 .nav a {
 	display: inline-block;
 	padding: 10px;
-}
-a {
-	color: #e91e63;
-	font-size: 1.25em;
-	padding: 20px 40px;
-	text-decoration: none;
-}
-a:hover {
-	background-color: #111;
-	color: #e91e63;
-}
-.logo:hover {
-	background: none;
-}
-p {
-	font-family: arapey;
-	text-align: center;
-}
-.video-wrapper h1 {
-	font-family: arapey;
-	text-align: center;
-}
-.game-wrapper embed {
-	text-align: center;
-	padding-top: 25px;
 }
 .art {
 	float: left;
@@ -81,6 +76,7 @@ p {
 .gallery .pics {
 	-webkit-transition: all 350ms ease;
 	transition: all 350ms ease;
+	padding-top:15px;
 }
 .gallery .animation {
 	-webkit-transform: scale(1);
@@ -90,7 +86,7 @@ p {
 
 @media (max-width: 450px) {
 .gallery {
-	width: 33%;
+	width: "33%";
 	-webkit-column-count: 1;
 	-moz-column-count: 1;
 	column-count: 1;
@@ -100,9 +96,16 @@ p {
 }
 }
 
-@media (max-width: 400px) {
-.btn.filter {
-	padding-left: 1.1rem;
-	padding-right: 1.1rem;
+.container {
+	padding-top:25px;
+	padding-bottom:50px;
 }
+
+.carousel-indicators li {
+  background-color: #999;
+  background-color: rgba(70,70,70,.25);
+}
+
+.carousel-indicators .active {
+  background-color: #444;
 }
