--- a/rnCSS.css
+++ b/rnCSS.css
@@ -7,6 +7,9 @@ body {
 h1 {
 	text-align: center;
 }
+h3{
+	text-align: center;
+}
 h4 {
 	text-align: center;
 }
@@ -52,6 +55,9 @@ a:hover {
 .nav a {
 	display: inline-block;
 	padding: 10px;
+}
+.intro{
+	margin-left:50px;
 }
 .art {
 	float: left;
